// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callbacks sequentially run as promises /w redirect: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected",
    "search": "",
    "state": Object {},
    "url": "/redirected",
  },
]
`;

exports[`callbacks sequentially run as promises /w redirect: 1 - history_index 1`] = `1`;

exports[`callbacks sequentially run as promises /w redirect: 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`callbacks sequentially run as promises /w redirect: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`callbacks sequentially run as promises /w redirect: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`callbacks sequentially run as promises /w redirect: 1 - routes - SECOND - beforeEnter 1`] = `1`;

exports[`callbacks sequentially run as promises /w redirect: 1 - routes - SECOND - onComplete 1`] = `0`;

exports[`callbacks sequentially run as promises /w redirect: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`callbacks sequentially run as promises /w redirect: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected",
        "search": "",
        "state": Object {},
        "url": "/redirected",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "redirect",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
      ],
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/second",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`callbacks sequentially run as promises /w redirect: 1 - title 1`] = `"REDIRECTED"`;

exports[`callbacks sequentially run as promises: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`callbacks sequentially run as promises: 1 - history_index 1`] = `1`;

exports[`callbacks sequentially run as promises: 1 - response 1`] = `
Object {
  "payload": "payload",
  "type": "SECOND_COMPLETE",
}
`;

exports[`callbacks sequentially run as promises: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`callbacks sequentially run as promises: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`callbacks sequentially run as promises: 1 - routes - SECOND - beforeEnter 1`] = `1`;

exports[`callbacks sequentially run as promises: 1 - routes - SECOND - onComplete 1`] = `1`;

exports[`callbacks sequentially run as promises: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`callbacks sequentially run as promises: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second",
  },
  "title": "SECOND_COMPLETE - \\"payload\\"",
}
`;

exports[`callbacks sequentially run as promises: 1 - title 1`] = `"SECOND"`;
